# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: task-manager-check.yml
constants/: labels_constants.py  statuses_constants.py  tasks_constants.py  users_constants.py
fixtures/: labels.json  statuses.json  tasklabelrelation.json  tasks.json  users.json
hexlet_django_project/: settings.py
locale/pl/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: constants.py  my_mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py  0003_alter_statuses_options.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_options_alter_tasks_created_by.py  0003_tasklabelrelation_tasks_labels.py
task_manager/templates/: base.html  create_edit_forms.html  delete.html  login.html  startpage.html
task_manager/templates/labels/: labels.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/tasks/: show_task.html  statuses.html  tasks.html
task_manager/templates/users/: delete.html  users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_users_first_name_alter_users_last_name_and_more.py  0003_alter_users_options.py  0004_alter_users_options.py
