[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Timur <81976283+mym1chelle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10.8"
django = "^4.1.4"
python-dotenv = "^0.21.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
whitenoise = "^6.2.0"
django-filter = "^22.1"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
